<resources>
    <string name="app_name">口算练习</string>
    <string name="app_title">小学生数学口算练习</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">答题记录</string>
    <string name="title_notifications">错题回顾</string>
    <string name="p_1">10以内的加法</string>
    <string name="p_2">20以内的加法</string>
    <string name="p_3">100以内的加法</string>
    <string name="p_4">万以内的加法</string>
    <string name="p_5">10以内的减法</string>
    <string name="p_6">20以内的减法</string>
    <string name="p_7">100以内的减法</string>
    <string name="p_8">万以内的减法</string>
    <string name="p_9">表内乘法</string>
    <string name="p_10">表内除法</string>
    <string name="p_11">表内乘除法</string>
    <string name="p_12">带余除法</string>
    <string name="p_13">两位数的乘法</string>
    <string name="p_14">10以内的加减混合</string>
    <string name="p_15">20以内的加减混合</string>
    <string name="p_16">100以内的加减混合</string>
    <string name="p_17">万以内的加减混合</string>
    <string name="dashboard_title">排行榜</string>
    <string name="score_num">总\ \ 数\ \ 量：</string>
    <string name="score_time">总\ \ 用\ \ 时：</string>
    <string name="score_avgTime">平均用时：</string>
    <string name="score_correct">答对题数：</string>
    <string name="score_incorrect">答错题数：</string>
    <string name="score_timeout">超时题数：</string>
    <string name="score_rate">正\ \ 确\ \ 率：</string>
    <string name="score_score">综合评分：</string>
    <string name="format_rate">%.2f</string>
    <string name="date_format">%02d/%02d</string>
    <string name="refresh_record">清空答题记录</string>
    <string name="score_each_time">每题时限：</string>
    <string name="rule">评分标准：分数取决于正确题目的数量与所用时间。答对题数越多，用时越短分数越高。</string>
    <string name="format_avg_time">%.1f</string>
</resources>
