<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:showDividers="middle">

            <Button
                android:id="@+id/button1_1"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p_1" />

            <Button
                android:id="@+id/button1_2"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p_2" />

            <Button
                android:id="@+id/button1_3"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p_3" />

            <Button
                android:id="@+id/button1_4"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p_4" />

            <Button
                android:id="@+id/button1_5"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p_5" />

            <Button
                android:id="@+id/button1_6"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p_6" />

            <Button
                android:id="@+id/button1_7"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p_7" />

            <Button
                android:id="@+id/button1_8"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p_8" />

            <Button
                android:id="@+id/button1_9"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p_9" />

            <Button
                android:id="@+id/button1_10"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p_10" />

            <Button
                android:id="@+id/button1_11"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p_11" />

            <Button
                android:id="@+id/button1_12"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p_12" />

            <Button
                android:id="@+id/button1_13"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p_13" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
